# Skill-Lab

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLMENTATION_PLAN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: ARCHITECTURE.md  CHECKS.md  IMPLEMENTATION_PLAN.md
docs/versions/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v1.0.0.md
examples/sample-skill/: SKILL.md
src/agent_skills_eval/: __init__.py  __main__.py  cli.py
src/agent_skills_eval/checks/: __init__.py  base.py
src/agent_skills_eval/core/: __init__.py  models.py  registry.py  scoring.py
src/agent_skills_eval/evaluators/: __init__.py  static_evaluator.py
src/agent_skills_eval/parsers/: __init__.py  skill_parser.py
src/agent_skills_eval/reporters/: __init__.py  console_reporter.py  json_reporter.py
src/skill_lab/: __init__.py  cli.py
src/skill_lab/checks/: base.py
src/skill_lab/core/: __init__.py  constants.py  exceptions.py  models.py  registry.py  scoring.py  utils.py
src/skill_lab/evaluators/: __init__.py  static_evaluator.py  trace_evaluator.py
src/skill_lab/parsers/: __init__.py  skill_parser.py  trace_parser.py
src/skill_lab/reporters/: console_reporter.py  json_reporter.py
src/skill_lab/runtimes/: base.py  claude_runtime.py  (+1 more)
tests/: __init__.py  conftest.py  test_checks.py  test_cli.py  test_evaluator.py  test_failure_analyzer.py  test_generator.py  test_parsers.py  test_scoring.py  test_triggers.py
(+36 files in other folders)
